# SArgs

./: CMakeLists.txt  Makefile  README.md  mgen.py
include/: ArgumentParser.hpp
include/interfaces/: SArgs
src/: ArgumentParser.cpp
test/: test.bash  test.cpp
